// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectDescriptionInputs renders successfully with base component 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h2
        class="FormLabel-wqrwj6-0 JaPpn"
      >
        Project Description
      </h2>
      <div
        class="InputContainer-sc-1hosyg-0 RYaOb"
      >
        <input
          class="FormInput__Input-sc-1b0ub2b-0 emUbYX"
          maxlength="60"
          name="clientDescription"
          placeholder="Client Description"
          type="text"
          value=""
        />
        <input
          class="FormInput__Input-sc-1b0ub2b-0 emUbYX"
          maxlength="60"
          name="projectDescription"
          placeholder="Project Description"
          type="text"
          value=""
        />
        <input
          class="FormInput__Input-sc-1b0ub2b-0 emUbYX"
          maxlength="60"
          name="projectOutcomes"
          placeholder="Project Outcomes"
          type="text"
          value=""
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <h2
      class="FormLabel-wqrwj6-0 JaPpn"
    >
      Project Description
    </h2>
    <div
      class="InputContainer-sc-1hosyg-0 RYaOb"
    >
      <input
        class="FormInput__Input-sc-1b0ub2b-0 emUbYX"
        maxlength="60"
        name="clientDescription"
        placeholder="Client Description"
        type="text"
        value=""
      />
      <input
        class="FormInput__Input-sc-1b0ub2b-0 emUbYX"
        maxlength="60"
        name="projectDescription"
        placeholder="Project Description"
        type="text"
        value=""
      />
      <input
        class="FormInput__Input-sc-1b0ub2b-0 emUbYX"
        maxlength="60"
        name="projectOutcomes"
        placeholder="Project Outcomes"
        type="text"
        value=""
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ProjectDescriptionInputs renders successfully with errored FormLabels 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h2
        class="FormLabel-wqrwj6-0 dPjrlO"
      >
        Project Description
      </h2>
      <div
        class="InputContainer-sc-1hosyg-0 RYaOb"
      >
        <input
          class="FormInput__Input-sc-1b0ub2b-0 emUbYX"
          maxlength="60"
          name="clientDescription"
          placeholder="Client Description"
          type="text"
          value=""
        />
        <input
          class="FormInput__Input-sc-1b0ub2b-0 emUbYX"
          maxlength="60"
          name="projectDescription"
          placeholder="Project Description"
          type="text"
          value=""
        />
        <input
          class="FormInput__Input-sc-1b0ub2b-0 emUbYX"
          maxlength="60"
          name="projectOutcomes"
          placeholder="Project Outcomes"
          type="text"
          value=""
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <h2
      class="FormLabel-wqrwj6-0 dPjrlO"
    >
      Project Description
    </h2>
    <div
      class="InputContainer-sc-1hosyg-0 RYaOb"
    >
      <input
        class="FormInput__Input-sc-1b0ub2b-0 emUbYX"
        maxlength="60"
        name="clientDescription"
        placeholder="Client Description"
        type="text"
        value=""
      />
      <input
        class="FormInput__Input-sc-1b0ub2b-0 emUbYX"
        maxlength="60"
        name="projectDescription"
        placeholder="Project Description"
        type="text"
        value=""
      />
      <input
        class="FormInput__Input-sc-1b0ub2b-0 emUbYX"
        maxlength="60"
        name="projectOutcomes"
        placeholder="Project Outcomes"
        type="text"
        value=""
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
